// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clearAdjacentTile should create a CLEAR_ADJACENT_TILE action 1`] = `
Object {
  "tile": Object {
    "adjacentMineCount": 1,
    "column": 1,
    "index": 5,
    "isCleared": false,
    "isFlagged": false,
    "isMine": false,
    "row": 1,
  },
  "type": "CLEAR_TILE",
}
`;

exports[`clearTile should create a CLEAR_TILE action 1`] = `
Object {
  "tile": Object {
    "adjacentMineCount": 0,
    "column": 0,
    "index": 4,
    "isCleared": false,
    "isFlagged": false,
    "isMine": false,
    "row": 1,
  },
  "type": "CLEAR_TILE",
}
`;

exports[`startNewField should create a START_NEW_FIELD action 1`] = `
Object {
  "field": Object {
    "height": 4,
    "mineCount": 4,
    "state": "active",
    "tiles": Array [
      Object {
        "adjacentMineCount": 0,
        "column": 0,
        "index": 0,
        "isCleared": false,
        "isFlagged": false,
        "isMine": false,
        "row": 0,
      },
      Object {
        "adjacentMineCount": 0,
        "column": 1,
        "index": 1,
        "isCleared": false,
        "isFlagged": false,
        "isMine": false,
        "row": 0,
      },
      Object {
        "adjacentMineCount": 1,
        "column": 2,
        "index": 2,
        "isCleared": false,
        "isFlagged": false,
        "isMine": false,
        "row": 0,
      },
      Object {
        "adjacentMineCount": 1,
        "column": 3,
        "index": 3,
        "isCleared": false,
        "isFlagged": false,
        "isMine": false,
        "row": 0,
      },
      Object {
        "adjacentMineCount": 0,
        "column": 0,
        "index": 4,
        "isCleared": false,
        "isFlagged": false,
        "isMine": false,
        "row": 1,
      },
      Object {
        "adjacentMineCount": 1,
        "column": 1,
        "index": 5,
        "isCleared": false,
        "isFlagged": false,
        "isMine": false,
        "row": 1,
      },
      Object {
        "adjacentMineCount": 2,
        "column": 2,
        "index": 6,
        "isCleared": false,
        "isFlagged": false,
        "isMine": false,
        "row": 1,
      },
      Object {
        "adjacentMineCount": 1,
        "column": 3,
        "index": 7,
        "isCleared": false,
        "isFlagged": false,
        "isMine": true,
        "row": 1,
      },
      Object {
        "adjacentMineCount": 1,
        "column": 0,
        "index": 8,
        "isCleared": false,
        "isFlagged": false,
        "isMine": false,
        "row": 2,
      },
      Object {
        "adjacentMineCount": 2,
        "column": 1,
        "index": 9,
        "isCleared": false,
        "isFlagged": false,
        "isMine": false,
        "row": 2,
      },
      Object {
        "adjacentMineCount": 2,
        "column": 2,
        "index": 10,
        "isCleared": false,
        "isFlagged": false,
        "isMine": true,
        "row": 2,
      },
      Object {
        "adjacentMineCount": 3,
        "column": 3,
        "index": 11,
        "isCleared": false,
        "isFlagged": false,
        "isMine": false,
        "row": 2,
      },
      Object {
        "adjacentMineCount": 0,
        "column": 0,
        "index": 12,
        "isCleared": false,
        "isFlagged": false,
        "isMine": true,
        "row": 3,
      },
      Object {
        "adjacentMineCount": 2,
        "column": 1,
        "index": 13,
        "isCleared": false,
        "isFlagged": false,
        "isMine": false,
        "row": 3,
      },
      Object {
        "adjacentMineCount": 2,
        "column": 2,
        "index": 14,
        "isCleared": false,
        "isFlagged": false,
        "isMine": false,
        "row": 3,
      },
      Object {
        "adjacentMineCount": 1,
        "column": 3,
        "index": 15,
        "isCleared": false,
        "isFlagged": false,
        "isMine": true,
        "row": 3,
      },
    ],
    "width": 4,
  },
  "type": "START_NEW_FIELD",
}
`;

exports[`toggleFlagTile should create a TOGGLE_FLAG_TILE action 1`] = `
Object {
  "tile": Object {
    "adjacentMineCount": 0,
    "column": 0,
    "index": 4,
    "isCleared": false,
    "isFlagged": false,
    "isMine": false,
    "row": 1,
  },
  "type": "TOGGLE_FLAG_TILE",
}
`;
